<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/background"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">

    <TextView
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:text="@string/height"
      android:textColor="#000"
      android:textSize="19sp" />

    <EditText
      android:id="@+id/height"
      android:layout_width="match_parent"
      android:layout_height="35dp"
      android:background="@drawable/shape"
      android:hint="@string/height_hint"
      android:inputType="number" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">

    <TextView
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:text="@string/weight"
      android:textColor="#000"
      android:textSize="19sp" />

    <EditText
      android:id="@+id/weight"
      android:layout_width="match_parent"
      android:layout_height="35dp"
      android:background="@drawable/shape"
      android:hint="@string/weight_hint"
      android:inputType="number" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">

    <TextView
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:text="@string/sex"
      android:textColor="#000"
      android:textSize="19sp" />

    <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <RadioButton
        android:id="@+id/radio_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/sex_man"
        android:textColor="#000"
        android:textSize="19sp" />

      <RadioButton
        android:id="@+id/radio_woman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/sex_woman"
        android:textColor="#000"
        android:textSize="19sp" />

    </RadioGroup>

  </LinearLayout>

  <Button
    android:id="@+id/compute"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:background="@drawable/compute_btn"
    android:text="@string/compute" />

  <Button
    android:id="@+id/clear"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:background="@drawable/clear_btn"
    android:text="@string/clear" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:padding="20dp"
    android:text="@string/introduce"
    android:textColor="#666" />

</LinearLayout>
