<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/background"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="340dip"
    android:layout_height="50dip"
    android:layout_marginLeft="10.0dip"
    android:layout_marginTop="10.0dip"
    android:orientation="horizontal"
    android:layout_marginStart="10.0dip">

    <Button
      android:id="@+id/choose_date"
      android:layout_width="wrap_content"
      android:layout_height="40dip"
      android:gravity="center"
      android:text="@string/set_remind_date"
      android:textColor="#ff0000" />

    <EditText
      android:id="@+id/show_date"
      android:layout_width="match_parent"
      android:layout_height="30dip"
      android:background="@drawable/shape"
      android:hint="@string/date_format"
      android:textColor="#ff0000"
      tools:ignore="TextFields" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="340dip"
    android:layout_height="50dip"
    android:layout_marginLeft="10.0dip"
    android:layout_marginTop="20.0dip"
    android:orientation="horizontal"
    android:layout_marginStart="10.0dip">

    <Button
      android:id="@+id/choose_time"
      android:layout_width="wrap_content"
      android:layout_height="40dip"
      android:gravity="center"
      android:text="@string/set_remind_time"
      android:textColor="#ff0000" />

    <EditText
      android:id="@+id/show_time"
      android:layout_width="match_parent"
      android:layout_height="30dip"
      android:background="@drawable/shape"
      android:hint="@string/time_format"
      android:textColor="#ff0000"
      tools:ignore="TextFields" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="340dip"
    android:layout_height="50dip"
    android:layout_marginLeft="10.0dip"
    android:layout_marginTop="20.0dip"
    android:orientation="horizontal"
    android:layout_marginStart="10.0dip">

    <Button
      android:id="@+id/add_remark"
      android:layout_width="wrap_content"
      android:layout_height="40dip"
      android:gravity="center"
      android:text="@string/add_task"
      android:textColor="#ff0000" />

    <EditText
      android:id="@+id/show_things"
      android:layout_width="match_parent"
      android:layout_height="30dip"
      android:background="@drawable/shape"
      android:hint="@string/task_hint"
      android:textColor="#ff0000"
      tools:ignore="TextFields" />
  </LinearLayout>

  <RelativeLayout
    android:layout_width="340dip"
    android:layout_height="50dip"
    android:layout_marginLeft="70.0dip"
    android:layout_marginTop="30.0dip"
    android:orientation="horizontal"
    android:layout_marginStart="70.0dip">

    <Button
      android:id="@+id/sure"
      android:layout_width="100dip"
      android:layout_height="50dip"
      android:gravity="center"
      android:background="@drawable/compute_btn"
      android:text="@string/sure"
      android:textColor="#ff0000" />

    <Button
      android:id="@+id/cancel"
      android:layout_width="100dip"
      android:layout_height="50dip"
      android:layout_marginLeft="30dp"
      android:layout_toRightOf="@id/sure"
      android:background="@drawable/clear_btn"
      android:text="@string/cancel"
      android:textColor="#ff0000"
      android:layout_marginStart="30dp"
      android:layout_toEndOf="@id/sure" />
  </RelativeLayout>


</LinearLayout>