<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <include
    android:id="@+id/id_toolbar_detail"
    layout="@layout/toolbar_main" />

  <EditText
    android:id="@+id/id_et_title"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="top"
    android:padding="10dp"
    android:hint="@string/title_hint"
    android:inputType="text" />

  <EditText
    android:id="@+id/id_et_content"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:gravity="top"
    android:padding="10dp"
    android:hint="@string/note_content_hint"
    android:inputType="text" />

  <Button
    android:id="@+id/id_btn_modify"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_gravity="end"
    android:padding="10dp"
    android:text="@string/modify_note" />
</LinearLayout>